force-app/main/default/objects/Bypass_Automation__c/Bypass_Automation__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Hierarchy custom settings for bypassing logics in Triggers and flows</description>
    <label>Bypass Automation</label>
</CustomObject>