force-app/main/default/objects/Bypass_Automation__c/fields/All_Triggers__c.field-meta.xml
<CustomField>
    <fullName>All_Triggers__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Flag to disable trigger logic for all Objects</description>
    <label>All Triggers</label>
    <type>Checkbox</type>
</CustomField>