force-app/main/default/objects/Bypass_Automation__c/fields/FL_Transaction_Journal__c.field-meta.xml
<CustomField>
    <fullName>FL_Transaction_Journal__c</fullName>
    <defaultValue>false</defaultValue>
    <description>To bypass [Transaction Journal] Member Enrolment Process flow</description>
    <label>FL Transaction Journal</label>
    <type>Checkbox</type>
</CustomField>