force-app/main/default/objects/Bypass_Automation__c/fields/TR_Account__c.field-meta.xml
<CustomField>
    <fullName>TR_Account__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Flag to disable trigger logic for Account object only</description>
    <label>TR Account</label>
    <type>Checkbox</type>
</CustomField>