force-app/main/default/objects/Bypass_Automation__c/fields/TR_Loyalty_Program_Member__c.field-meta.xml
<CustomField>
    <fullName>TR_Loyalty_Program_Member__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Flag to disable trigger logic for Loyalty Program Member object only</description>
    <label>TR Loyalty Program Member</label>
    <type>Checkbox</type>
</CustomField>