force-app/main/default/objects/Bypass_Automation__c/fields/TR_Promotion__c.field-meta.xml
<CustomField>
    <fullName>TR_Promotion__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Flag to disable trigger logic for Promotion object only</description>
    <label>TR Promotion</label>
    <type>Checkbox</type>
</CustomField>