force-app/main/default/objects/Bypass_Automation__c/fields/TR_Voucher__c.field-meta.xml
<CustomField>
    <fullName>TR_Voucher__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Flag to disable trigger logic for Voucher object only</description>
    <label>TR Voucher</label>
    <type>Checkbox</type>
</CustomField>