force-app/main/default/objects/Bypass_Automation__c/fields/WalletCallOut__c.field-meta.xml
<CustomField>
    <fullName>WalletCallOut__c</fullName>
    <defaultValue>false</defaultValue>
    <description>true to make callout to wallet service even if LMS already has links data
false (default) not to make callout if LMS already has links data</description>
    <label>WalletCallOut</label>
    <type>Checkbox</type>
</CustomField>